# maptools

./: .gitignore  NOTES.md  README.md
python/: README.md  combine_quadrants_gltf.py  heightmap_to_gltf.py  map_tile_calc.py  map_tile_defs.py
rust/: Cargo.toml
rust/sql/: terrain.sql
rust/src/common/: auth.rs  credentials.rs  impostorinfo.rs  initialimpostors.rs  lib.rs  minifcgi.rs  testlogger.rs  uploadedregioninfo.rs
rust/src/examples/echo/: echo.rs
rust/src/generator/: generateterrain.rs  initialimpostors.rs  persistnumbers.rs  regionorder.rs  sculptmaker.rs  vizgroup.rs
rust/src/obsolete/: eventlogger.rs
rust/src/server/: auth.rs  downloadimpostor.rs  uploadimpostor.rs  uploadterrain.rs
server/: Cargo.toml  credentials.txt
server/sql/: terrain.sql
server/src/: credentials.rs  fcgi_main.rs  fcgisocketsetup.rs  generateterrain.rs  lib.rs  minifcgi.rs  sculptmaker.rs  uploadterrain.rs  vizgroup.rs
server/src/examples/echo/: echo.rs
src/: grid_survey_reader.py  map_tile_calc.py  map_tile_reader.py
src/src/: grid_survey_reader.py
