[package]
name = "terrainlogger"
version = "0.1.0"
edition = "2024"
description = "Server for logging terrain information for SL/OS"

[[bin]]
name = "uploadterrain"           # The name of the target.
path = "src/server/uploadterrain.rs"    # The source file of the target.
# description = "This becomes uploadterrain.fcgi and runs on an Apache server under mod_fcgid"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
required-features = [] # Features required to build this target (N/A for lib).

[[bin]]
name = "generateterrain"           # The name of the target.
path = "src/generator/generateterrain.rs"    # The source file of the target.
# description = "This is a command line client which builds a directory of images and meshes to be uploaded to Second Life/Open Simulator"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
required-features = [] # Features required to build this target (N/A for lib).

[lib]
name = "common"
path = "src/common/lib.rs"

[[example]]
name = "echo"
path = "src/examples/echo/echo.rs"


[profile.release]
debug = true
lto = "thin"

[dependencies]
anyhow = "1"
mysql = "24"
serde = { version = "1.0", features = ["derive"] }
json = "0.12"
serde_json = "1.0"
chrono = "0.4"
#### thiserror = "1"
envie = "0.2"
getopts = "0.2"

outer_cgi = "0.3.1"
sha1 = "0.10"
hex = "0.4"
shellexpand = "3.1"

num-traits = "0.2"
num-derive = "0.4"

#   Debug logging
simplelog = "0.12"
log = "0.4"

#   FCGI socket problems
nix = { version = "0.30", features = ["socket"] }



