[package]
name = "terrainlogger"
version = "0.1.0"
edition = "2024"
description = "Server for logging terrain information for SL/OS"

[[bin]]
name = "terrainlogger"           # The name of the target.
path = "src/fcgi_main.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
required-features = [] # Features required to build this target (N/A for lib).

[lib]
name = "minifcgi"
path = "src/lib.rs"

[[example]]
name = "echo"
path = "src/examples/echo/echo.rs"


[profile.release]
debug = true
lto = "thin"

[dependencies]
anyhow = "1"
mysql = "24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1"

outer_cgi = "0.3.1"
sha1 = "0.10"
hex = "0.4"
shellexpand = "3.1"

num-traits = "0.2"
num-derive = "0.4"

#   Debug logging
simplelog = "0.12"
log = "0.4"


